Bug fix.
Using `scale()` to resize the canvas caused it to cover the controls and
/ or be cut off at the bottom. I changed the code to calculate a new CSS
width and height without changing the canvas width and height.

--- a/19_UnrealWebcamFun/style.css
+++ b/19_UnrealWebcamFun/style.css
@@ -8,6 +8,7 @@ html, body {
   background: white;
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   overflow: hidden;
 }
 
@@ -17,6 +18,8 @@ html, body {
   justify-content: center;
   align-items: center;
   padding-left: 1em;
+  width: 11rem;
+  box-sizing: border-box;
 }
 
 .controls label {
@@ -55,18 +58,19 @@ html, body {
 
 .strip {
   position: absolute;
-  padding: 2rem;
+  padding: 1rem;
   bottom: 0;
-  left: 0;
-  float: left;
+  left: 11rem;
+  border-radius: 1rem 1rem 0 0;
 }
 
 .strip img {
   width: 100px;
   overflow-x: scroll;
-  padding: 0.8rem 0.8rem 2.5rem 0.8rem;
-  box-shadow: 0 0 3px rgba(0,0,0,0.2);
+  padding: 0.8rem 0.8rem 2rem 0.8rem;
+  box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
   background: white;
+  margin-right: 5px;
 }
 
 .strip a:nth-child(5n+1) img { rotate: 10deg; }
